fix: update flex wrap

--- a/style.css
+++ b/style.css
@@ -474,6 +474,7 @@ li {
 
 .memories-nav {
   display: flex;
+  flex-wrap: wrap;
   width: 75%;
 }
 
